# OpenApoc

./: CMakeLists.txt  vcpkg.json
data/languages/: openapoc_ja.po  openapoc_ko.po  openapoc_ru.po  openapoc_zh.po
data/languages/ja/LC_MESSAGES/: openapoc.mo
data/languages/ko/LC_MESSAGES/: openapoc.mo
data/languages/ru/LC_MESSAGES/: openapoc.mo
data/languages/zh/LC_MESSAGES/: openapoc.mo
framework/: CMakeLists.txt  data.cpp  data.h  font.cpp  font.h  framework.cpp  options.cpp  options.h
game/state/: gameevent.cpp  stateobject.h
game/state/battle/: battle.cpp  battleitem.cpp  battleunit.cpp
game/state/city/: city.cpp  vehicle.cpp
game/state/shared/: aequipment.cpp  agent.cpp
game/ui/city/: bribescreen.cpp  diplomatictreatyscreen.cpp
game/ui/components/: controlgenerator.cpp
game/ui/general/: aequipscreen.cpp  creditsmenu.cpp  savemenu.cpp
game/ui/skirmish/: skirmish.cpp
game/ui/tileview/: battleview.cpp  cityview.cpp
game/ui/ufopaedia/: ufopaediacategoryview.cpp
tools/extractors/: main.cpp
tools/launcher/: CMakeLists.txt
